@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.RestController;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -34,7 +33,7 @@ public class EasyExcelController {
 		response.setContentType("application/vnd.ms-excel");
 		response.setCharacterEncoding("utf-8");
 		// 这里URLEncoder.encode可以防止中文乱码 当然和easyexcel没有关系
-		String fileName = URLEncoder.encode("测试", StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+		String fileName = URLEncoder.encode("测试", "UTF-8").replaceAll("\\+", "%20");
 		response.setHeader("Content-disposition", "attachment;filename*=utf-8''" + fileName + ".xlsx");
 		EasyExcel.write(response.getOutputStream(), EasyExcelDemoData.class).sheet("模板").doWrite(data());
 	}
@@ -46,7 +45,7 @@ public class EasyExcelController {
 			response.setContentType("application/vnd.ms-excel");
 			response.setCharacterEncoding("utf-8");
 			// 这里URLEncoder.encode可以防止中文乱码 当然和easyexcel没有关系
-			String fileName = URLEncoder.encode("测试", StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+			String fileName = URLEncoder.encode("测试", "UTF-8").replaceAll("\\+", "%20");
 			response.setHeader("Content-disposition", "attachment;filename*=utf-8''" + fileName + ".xlsx");
 			// 这里需要设置不关闭流
 			EasyExcel.write(response.getOutputStream(), EasyExcelDemoData.class).autoCloseStream(Boolean.FALSE).sheet("模板")
