@@ -14,7 +14,6 @@ import org.springframework.web.multipart.MultipartFile;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 /**
@@ -41,7 +40,7 @@ public class EasyExcelDataServiceImpl extends ServiceImpl<EasyExcelDataMapper, E
 					new QueryWrapper<EasyExcelData>().lambda().isNotNull(EasyExcelData::getCreateTime));
 			response.setContentType("application/vnd.ms-excel");
 			response.setCharacterEncoding("utf-8");
-			String fileName = URLEncoder.encode("测试download", StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+			String fileName = URLEncoder.encode("测试download", "UTF-8").replaceAll("\\+", "%20");
 			response.setHeader("Content-disposition", "attachment;filename*=utf-8''" + fileName + ".xlsx");
 			EasyExcel.write(response.getOutputStream(), EasyExcelData.class).autoCloseStream(Boolean.FALSE).sheet("sheet1")
 					.doWrite(list);
@@ -63,7 +62,7 @@ public class EasyExcelDataServiceImpl extends ServiceImpl<EasyExcelDataMapper, E
 		response.setContentType("application/vnd.ms-excel");
 		response.setCharacterEncoding("utf-8");
 		// 这里URLEncoder.encode可以防止中文乱码 当然和easyexcel没有关系
-		String fileName = URLEncoder.encode("测试downloadNoFailure", StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+		String fileName = URLEncoder.encode("测试downloadNoFailure", "UTF-8").replaceAll("\\+", "%20");
 		response.setHeader("Content-disposition", "attachment;filename*=utf-8''" + fileName + ".xlsx");
 		EasyExcel.write(response.getOutputStream(), EasyExcelData.class).sheet("模板").doWrite(list2);
 	}
